# mira

./: Makefile  fix-whitespace.yaml  mira.cabal
src/Language/: Mira.hs
src/Language/Mira/: BuildNfa.hs  Generate.hs  ImplementNfa.hs  Matches.hs  MinimiseDfa.hs  NfaLib.hs  NfaMisc.hs  NfaToDfa.hs  NfaTypes.hs  RegExp.hs  Root.hs
src/Tests/: RunTests.hs
src/Tests/Language/Mira/: TestBuildNfa.hs  TestMinimiseDfa.hs
src/examples/: BuildComplexNfaExample.hs  ParserExample.hs
