Name:           mira
Version:        1.0
Cabal-Version:  >=1.8
License:        BSD3
License-File:   LICENCE
Author:         Simon J. Thompson
Homepage:       http://www.cs.kent.ac.uk/people/staff/sjt/craft2e/regExp.html
Maintainer:     a.j.delaney@brighton.ac.uk
Category:       Automata Theory
Synopsis:       A regular expression and automata library.
Build-Type:     Simple
Tested-With:    GHC == 9.0.1

extra-source-files: src/Language/Mira/RegExpParser.y

Library
  Build-Depends:        base >= 4.14.0.0 && < 4.16
                      , containers >= 0.6.2.1 && < 0.7
                      , QuickCheck >= 2 && < 2.15
                      , array >= 0.2.0
  Build-Tools:        happy >= 1.18
  hs-source-dirs:     src
  Exposed-modules:
    Language.Mira,
    Language.Mira.RegExpParser,
    Language.Mira.RegExp,
    Language.Mira.NfaTypes,
    Language.Mira.ImplementNfa,
    Language.Mira.BuildNfa,
    Language.Mira.NfaLib,
    Language.Mira.NfaMisc,
    Language.Mira.NfaToDfa,
    Language.Mira.MinimiseDfa

  Ghc-Options: -Wall

test-suite mira-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src/Tests
  main-is:          RunTests.hs
  other-modules:      Language.Mira.TestBuildNfa
                    , Language.Mira.TestMinimiseDfa

  build-depends:   mira
                 , base >= 4.14 && < 4.16
                 , containers >= 0.6.2.1 && < 0.7
                 , HUnit >= 1.6.2.0 && < 1.7
                 , QuickCheck >= 2 && < 2.15
                 , test-framework >= 0.8.0.2 && < 0.9
                 , test-framework-hunit >= 0.3.0.2 && < 0.4
                 , test-framework-quickcheck2 >= 0.3.0.5 && < 0.4

  ghc-options: -Wall
